# ozz_test_ucast

./: CMakeLists.txt  README.md  server.cpp  version.hpp.in
etc/: conf.json
include/: logdeff.hpp
include/ozz/: platform.hpp  types.hpp
include/ozz/net/: client.hpp  server.hpp  socket.hpp
include/ozz/net/src/: client.cpp  server.cpp  ucast.cpp  udpserver.cpp
include/ozz/net/unicast/: ucast.hpp  udpserver.hpp
include/ozz/protocol/: dest_pack_data.hpp  msg_hdr.hpp  pack_hdr.hpp  request_msg_hdr.hpp
include/ozz/utils/: generator.hpp  mcs.hpp  taskler.hpp  unique_values.hpp  xpipe.hpp
include/ozz/utils/src/: generator.cpp  taskler.cpp
src/: CMakeLists.txt  client.cpp
